--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ baseurl: ""
 repo: ""
 email: "wellingtonclub@protonmail.com"
 # disqus: "alembic-1" # Blog post comments, uncomment the option and set the site ID from your Disqus account
-# google_analytics: ''
+google_analytics: 'UA-176181386-1'
 # google_analytics_anonymize_ip: ''
 # service_worker: false # Will turn off the service worker if set to false
 css_inline: true # Will insert all styles into a single <style> block in the <head> element and remove the style <link> reference
